crates/cribo/tests/snapshots/bundled_code@pyfail_relative_import_cycles.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/pyfail_relative_import_cycles/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None):
        self._entry = entry
        self._namespace = namespace

    def create_module(self, spec):
        if self._namespace is not None:
            return self._namespace
        if self._entry[1] is not None:
            return globals()[self._entry[1]]
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        pristine = type(self)._pristine
        key = id(module)
        if getattr(module, '_cribo_machinery_loaded', False):
            saved = pristine.get(key)
            if saved is not None:
                module.__dict__.clear()
                module.__dict__.update(saved)
            module.__initialized__ = False
            module.__initializing__ = False
        state = dict(module.__dict__)
        if key not in pristine:
            pristine[key] = dict(state)
        try:
            globals()[init](module)
            module._cribo_machinery_loaded = True
        except BaseException:
            module.__dict__.clear()
            module.__dict__.update(state)
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name)), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder.register('services.auth', '_cribo_init___cribo_9d48f2_services_auth', 'services_auth', False)
_cribo_finder.register('services.database', '_cribo_init___cribo_62de34_services_database', 'services_database', False)
_cribo_finder.register('services', None, 'services', True)
services = _cribo.types.SimpleNamespace(__name__='services')
services_auth = _cribo.types.SimpleNamespace(__name__='services.auth', __initializing__=False, __initialized__=False)
_cribo_finder.bind('services.auth', services_auth)
services.auth = services_auth
services_database = _cribo.types.SimpleNamespace(__name__='services.database', __initializing__=False, __initialized__=False)
_cribo_finder.bind('services.database', services_database)
services.database = services_database
def _cribo_init___cribo_9d48f2_services_auth(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = 'services'
    self.__doc__ = None
    global services_database
    services_database = _cribo_init___cribo_62de34_services_database(services_database)
    get_connection = services.database.get_connection
    self.get_connection = get_connection
    self.get_connection = get_connection

    def authenticate_user(username):
        """Authenticate user using database connection"""
        conn = get_connection()
        return f"auth({username}, conn={conn})"
    authenticate_user.__module__ = 'services.auth'
    authenticate_user.__qualname__ = 'authenticate_user'
    self.authenticate_user = authenticate_user

    def get_user_context():
        """Get user context - used by database module"""
        return "user_context_from_auth"
    get_user_context.__module__ = 'services.auth'
    get_user_context.__qualname__ = 'get_user_context'
    self.get_user_context = get_user_context
    self.__initialized__ = True
    self.__initializing__ = False
    return self
services_auth.__init__ = _cribo_init___cribo_9d48f2_services_auth
def _cribo_init___cribo_62de34_services_database(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = 'services'
    self.__doc__ = None
    global services_auth
    services_auth = _cribo_init___cribo_9d48f2_services_auth(services_auth)
    get_user_context = services.auth.get_user_context
    self.get_user_context = get_user_context
    self.get_user_context = get_user_context

    def get_connection():
        """Get database connection with user context"""
        context = get_user_context()
        return f"db_connection(context={context})"
    get_connection.__module__ = 'services.database'
    get_connection.__qualname__ = 'get_connection'
    self.get_connection = get_connection

    def execute_query(query):
        """Execute a database query"""
        return f"query_result({query})"
    execute_query.__module__ = 'services.database'
    execute_query.__qualname__ = 'execute_query'
    self.execute_query = execute_query
    self.__initialized__ = True
    self.__initializing__ = False
    return self
services_database.__init__ = _cribo_init___cribo_62de34_services_database
services.auth = _cribo_init___cribo_9d48f2_services_auth(services_auth)
auth = services.auth
def main():
    result = auth.authenticate_user("test_user")
    print(f"Relative import cycle result: {result}")
if __name__ == "__main__":
    main()
database = services.database
