crates/cribo/tests/snapshots/bundled_code@side_effect_preservation.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/side_effect_preservation/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n, *, _getattr=getattr):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return _getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n, *, _getattr=getattr, _object=object):
        return _object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else _getattr(_object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None, reload_target=None):
        self._entry = entry
        self._namespace = namespace
        self._reload_target = reload_target

    def create_module(self, spec, *, _getattr=getattr, _globals=globals, _id=id, _setattr=setattr, _type=type, _SimpleNamespace=_cribo.types.SimpleNamespace):
        module = None
        if self._namespace is not None:
            module = self._namespace
        elif self._entry[1] is not None:
            module = _globals()[self._entry[1]]
        if module is not None:
            if _getattr(module, '_cribo_machinery_loaded', False):
                saved = _type(self)._pristine.get(_id(module))
                fresh = _SimpleNamespace()
                fresh.__dict__.update(saved if saved is not None else {'__name__': spec.name})
                return fresh
            return module
        module = _SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            _setattr(module, export, _globals()[binding])
        return module

    def exec_module(self, module, *, _BaseException=BaseException, _dict=dict, _globals=globals, _id=id, _type=type):
        init = self._entry[0]
        pristine = _type(self)._pristine
        key = _id(module)
        if init is None:
            if key not in pristine:
                pristine[key] = _dict(module.__dict__)
            module._cribo_machinery_loaded = True
            return
        is_reload = self._reload_target is module
        if is_reload:
            module.__initialized__ = False
            module.__initializing__ = False
        state = _dict(module.__dict__)
        if key not in pristine:
            pristine[key] = _dict(state)
        try:
            _globals()[init](module)
            module._cribo_machinery_loaded = True
        except _BaseException:
            if is_reload:
                module.__initializing__ = False
            else:
                module.__dict__.clear()
                module.__dict__.update(state)
                module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name), target), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder_local.register('external_plugin', '_cribo_init___cribo_f23a44_external_plugin', 'external_plugin', False)
_cribo_finder_local.register('state', None, None, False, {'get_state': 'get_state', 'add_plugin': 'add_plugin'})
_cribo_finder_local.register('utils', None, None, False, {'unused_function': 'unused_function'})
state = _cribo.types.SimpleNamespace(__name__='state', __doc__='Shared state module to avoid circular imports.')
"""Shared state module to avoid circular imports."""
_registered_plugins = []
def get_state():
    """Get a copy of the current state."""
    return _registered_plugins.copy()
get_state.__module__ = 'state'
def add_plugin(name):
    """Add a plugin to the registry."""
    _registered_plugins.append(name)
    return name
add_plugin.__module__ = 'state'
state.add_plugin = add_plugin
state.get_state = get_state
external_plugin = _cribo.types.SimpleNamespace(__name__='external_plugin', __initializing__=False, __initialized__=False)
_cribo_finder.bind('external_plugin', external_plugin)
def _cribo_init___cribo_f23a44_external_plugin(_cribo_self, *, _cribo_getattr=getattr, _cribo_base_exception=BaseException):
    if _cribo_getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if _cribo_getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = ''
    _cribo_self.__doc__ = 'External plugin that registers itself when imported.'
    """External plugin that registers itself when imported."""
    add_plugin = state.add_plugin
    external_plugin.add_plugin = add_plugin

    def register_plugin():
        """Register this plugin."""
        return add_plugin("external_plugin")
    register_plugin.__module__ = 'external_plugin'
    register_plugin.__qualname__ = 'register_plugin'
    _cribo_self.register_plugin = register_plugin
    add_plugin("external_plugin_loaded")
    _cribo_self.__initialized__ = True
    _cribo_self.__initializing__ = False
    return _cribo_self
external_plugin.__init__ = _cribo_init___cribo_f23a44_external_plugin
utils = _cribo.types.SimpleNamespace(__name__='utils', __doc__='Utility module with unused functions.')
"""Utility module with unused functions."""
def unused_function():
    """This function is imported but never used."""
    return "unused"
unused_function.__module__ = 'utils'
utils.unused_function = unused_function
"""Test that side-effect imports are preserved even when symbols are unused."""
registered_plugins = []
def test_side_effects():
    """Test function that imports modules for side effects only."""
    register_plugin = _cribo_init___cribo_f23a44_external_plugin(globals()['external_plugin']).register_plugin
    return get_state()
if __name__ == "__main__":
    print(f"Initial state: {get_state()}")
    result = test_side_effects()
    print(f"After imports: {result}")
